--- a/AUTHORS
+++ b/AUTHORS
@@ -2,4 +2,5 @@
 # This file lists all contributors to the repository.
 # See hack/generate-authors.sh to make modifications.
 
-kirollous Hany <kirollous85
+Kirollous Hany <kirollous85hany@gmail.com>
+Ashraf Atef
